// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The form components as a form should render and change accordingly 1`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form
    name="testForm"
  >
     
    <div
      class="form-row_container"
    >
      <label>
        My Label
        <input
          name="TextBox"
          type="text"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Checkbox
        <input
          name="checkbox"
          type="checkbox"
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Date
        <input
          name="datetime"
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Range
        <input
          max="100"
          min="0"
          step="1"
          type="range"
          value="50"
        />
      </label>
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        Telephone
        <input
          name="TextBox"
          type="tel"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          name="datetime"
          type="datetime"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Month
        <input
          name="datetime"
          type="month"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Week
        <input
          name="datetime"
          type="week"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          name="datetime"
          type="datetime-local"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Time
        <input
          name="datetime"
          type="time"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Drop Down
        <select
          data-testid="dd1"
        >
          <optgroup
            label="First Group"
          >
            <option
              value="1"
            >
              First
            </option>
            <option
              value="2"
            >
              Second
            </option>
            <option
              value="3"
            >
              Third
            </option>
          </optgroup>
          <optgroup
            label="Second Group"
          >
            <option
              value="11"
            >
              Second First
            </option>
            <option
              value="12"
            >
              Second Second
            </option>
            <option
              value="13"
            >
              Second Third
            </option>
          </optgroup>
          <optgroup
            label="Third Group"
          >
            <option
              value="21"
            >
              Third First
            </option>
            <option
              value="22"
            >
              Third Second
            </option>
            <option
              value="23"
            >
              Third Third
            </option>
          </optgroup>
        </select>
      </label>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        
      </li>
      <li
        data-testid="range"
      >
        Range: 
        
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render and change accordingly 2`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form
    name="testForm"
  >
     
    <div
      class="form-row_container"
    >
      <label>
        My Label
        <input
          name="TextBox"
          type="text"
          value="Changed Value"
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Checkbox
        <input
          name="checkbox"
          type="checkbox"
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Date
        <input
          name="datetime"
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Range
        <input
          max="100"
          min="0"
          step="1"
          type="range"
          value="50"
        />
      </label>
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        Telephone
        <input
          name="TextBox"
          type="tel"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          name="datetime"
          type="datetime"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Month
        <input
          name="datetime"
          type="month"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Week
        <input
          name="datetime"
          type="week"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My DateTime
        <input
          name="datetime"
          type="datetime-local"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Time
        <input
          name="datetime"
          type="time"
          value=""
        />
      </label>
    </div>
    <div
      class="form-row_container"
    >
      <label>
        My Drop Down
        <select
          data-testid="dd1"
        >
          <optgroup
            label="First Group"
          >
            <option
              value="1"
            >
              First
            </option>
            <option
              value="2"
            >
              Second
            </option>
            <option
              value="3"
            >
              Third
            </option>
          </optgroup>
          <optgroup
            label="Second Group"
          >
            <option
              value="11"
            >
              Second First
            </option>
            <option
              value="12"
            >
              Second Second
            </option>
            <option
              value="13"
            >
              Second Third
            </option>
          </optgroup>
          <optgroup
            label="Third Group"
          >
            <option
              value="21"
            >
              Third First
            </option>
            <option
              value="22"
            >
              Third Second
            </option>
            <option
              value="23"
            >
              Third Third
            </option>
          </optgroup>
        </select>
      </label>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        Changed Value
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
      </li>
      <li
        data-testid="range"
      >
        Range: 
        50
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;
